--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charSet="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <title>Utilty - Open Source Liquidity Protocol</title>
+    <title>Aave - Open Source Liquidity Protocol</title>
     <meta name="description"
         content="Aave is an Open Source Protocol to create Non-Custodial Liquidity Markets to earn interest on supplying and borrowing assets with a variable or stable interest rate. The protocol is designed for easy integration into your products and services." />
-    <meta property="og:title" content="Utility - Open Source Liquidity Protocol" />
+    <meta property="og:title" content="Aave - Open Source Liquidity Protocol" />
     <meta property="og:description"
         content="Aave is an Open Source Protocol to create Non-Custodial Liquidity Markets to earn interest on supplying and borrowing assets with a variable or stable interest rate. The protocol is designed for easy integration into your products and services." />
     <meta property="og:image" content="aaveMetaLogo-min.jpg" />
@@ -1878,15 +1878,15 @@
     <script src="_next/static/chunks/webpack-0a821fcf07531fe7.js" defer=""></script>
     <script src="_next/static/chunks/framework-bb5c596eafb42b22.js" defer=""></script>
     <script src="_next/static/chunks/main-5d9d21faa54fd8bf.js" defer=""></script>
-    <script src="_next/static/chunks/pages/_app-75e23ab4b1963b51.js" defer=""></script>
+    <script src="_next/static/chunks/pages/_app-ddc0a5a61c51f876.js" defer=""></script>
     <script src="_next/static/chunks/249-14833263b8b2dad8.js" defer=""></script>
     <script src="_next/static/chunks/897-d8412fb3f99afc7a.js" defer=""></script>
     <script src="_next/static/chunks/176-0073e877959cdbaf.js" defer=""></script>
     <script src="_next/static/chunks/270-70013c17ae01f612.js" defer=""></script>
     <script src="_next/static/chunks/pages/index-aecd8013c0505251.js" defer=""></script>
-    <script src="_next/static/vLzoHMotNnFk-NXWLzYFU/_buildManifest.js" defer=""></script>
-    <script src="_next/static/vLzoHMotNnFk-NXWLzYFU/_ssgManifest.js" defer=""></script>
-    <script src="_next/static/vLzoHMotNnFk-NXWLzYFU/_middlewareManifest.js" defer=""></script>
+    <script src="_next/static/mEhuvmhNZlR0h8aKIE2Lv/_buildManifest.js" defer=""></script>
+    <script src="_next/static/mEhuvmhNZlR0h8aKIE2Lv/_ssgManifest.js" defer=""></script>
+    <script src="_next/static/mEhuvmhNZlR0h8aKIE2Lv/_middlewareManifest.js" defer=""></script>
 </head>
 
 <body>
@@ -2144,7 +2144,8 @@
         </main>
     </div>
     <script id="__NEXT_DATA__"
-        type="application/json">{"props":{"pageProps":{}},"page":"/","query":{},"buildId":"vLzoHMotNnFk-NXWLzYFU","nextExport":true,"autoExport":true,"isFallback":false,"scriptLoader":[]}</script>
+        type="application/json">{"props":{"pageProps":{}},"page":"/","query":{},"buildId":"mEhuvmhNZlR0h8aKIE2Lv","nextExport":true,"autoExport":true,"isFallback":false,"scriptLoader":[]}</script>
 </body>
+<!-- Mirrored from app.aave.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 23 Mar 2023 16:40:16 GMT -->
 
 </html>
