--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 <head>
     <meta charSet="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <title>Unity Protocol- Open Source Liquidity Protocol</title>
+    <title>Unity Protocol- The First Lending Protocol On Core</title>
     <meta name="description"
-        content="Aave is an Open Source Protocol to create Non-Custodial Liquidity Markets to earn interest on supplying and borrowing assets with a variable or stable interest rate. The protocol is designed for easy integration into your products and services." />
-    <meta property="og:title" content="Aave - Open Source Liquidity Protocol" />
+        content="The First Lending Protocol On Core" />
+    <meta property="og:title" content="Aave - The First Lending Protocol On Core" />
     <meta property="og:description"
-        content="Aave is an Open Source Protocol to create Non-Custodial Liquidity Markets to earn interest on supplying and borrowing assets with a variable or stable interest rate. The protocol is designed for easy integration into your products and services." />
+        content="Unity Protocol Aave is The First is the first Lending Protocol On Core" />
     <meta property="og:image" content="aaveMetaLogo-min.jpg" />
     <meta name="twitter:image" content="aaveMetaLogo-min.jpg" />
     <meta name="twitter:image:alt" content="aave governance image" />
-    <meta name="twitter:site" content="@AaveAave" />
+    <meta name="twitter:site" content="@unitycorepro" />
     <meta property="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Open Source Liquidity Protocol" />
+    <meta name="twitter:title" content="The First Lending Protocol On Core" />
     <meta name="twitter:description"
-        content="Aave is an Open Source Protocol to create Non-Custodial Liquidity Markets to earn interest on supplying and borrowing assets with a variable or stable interest rate. The protocol is designed for easy integration into your products and services." />
+        content="The First Lending Protocol On Core" />
     <meta name="keywords"
-        content="Decentralized Finance, DeFi, lending, borrowing, stablecoins, Ethereum, assets, erc-20, smart contracts, open finance, trustless" />
+        content="Decentralized Finance, DeFi, lending, borrowing, stablecoins, Core Chain, assets, Core, smart contracts, open finance, trustless" />
     <meta name="next-head-count" content="14" />
     <meta name="theme-color" content="#00244D" />
     <link rel="shortcut icon" href="favicon.ico" />
