--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             -webkit-transition: top 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
             transition: top 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
             z-index: 1100;
-            background-color: #2B2D3C;
+            background-color: #19191c;
             display: -webkit-box;
             display: -webkit-flex;
             display: -ms-flexbox;
@@ -870,7 +870,7 @@
         }
 
         .css-614h4q {
-            background-color: #2B2D3C;
+            background-color: #19191c;
             color: #F1F1F3;
         }
 
@@ -1961,7 +1961,7 @@
                                                 class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-nq2fwf">
                                                 <div class="MuiBox-root css-70qvj9">
                                                     <div class="MuiBox-root css-1slt5fp"><img
-                                                            src="icons/networks/ethereum.svg" alt="" width="100%"
+                                                            src="icons/networks/coredao.png" alt="" width="100%"
                                                             height="100%" /></div>
                                                     <div class="MuiBox-root css-vc54u4">
                                                         <h1 class="MuiTypography-root MuiTypography-h1 css-1jz7z4v">
