--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
             height: 2px;
             bottom: -6px;
             left: 0;
-            background: linear-gradient(248.86deg, #B6509E 10.51%, #2EBAC6 93.41%);
+            background: linear-gradient(248.86deg, #fa7202 10.51%, #fc9109 93.41%);
             transform-origin: bottom right;
             -webkit-transition: -webkit-transform 0.25s ease-out;
             transition: transform 0.25s ease-out;
@@ -657,7 +657,7 @@
             font-size: 0.875rem;
             padding: 6px 12px;
             color: #fff;
-            background: linear-gradient(248.86deg, #B6509E 10.51%, #2EBAC6 93.41%);
+            background: linear-gradient(248.86deg, #fc9109 10.51%, #fa7202 93.41%);
             -webkit-transition: all 0.2s ease;
             transition: all 0.2s ease;
         }
@@ -712,7 +712,7 @@
 
         .css-9fybxg:hover,
         .css-9fybxg.Mui-focusVisible {
-            background: linear-gradient(248.86deg, #B6509E 10.51%, #2EBAC6 93.41%);
+            background: linear-gradient(248.86deg, #fa7202 10.51%, #fc9109 93.41%);
             opacity: 0.9;
         }
 
@@ -1348,7 +1348,7 @@
             padding-left: 8px;
             padding-right: 8px;
             border-radius: 12px;
-            background: linear-gradient(248.86deg, #B6509E 10.51%, #2EBAC6 93.41%);
+            background: linear-gradient(248.86deg, #fa7202 10.51%, #fc9109 93.41%);
         }
 
         .css-my2x37 {
