--- a/staking/index.html
+++ b/staking/index.html
@@ -1739,11 +1739,7 @@
                                     alt="" />
                                 <h1 class="MuiTypography-root MuiTypography-h1 css-1537p62">Staking</h1>
                             </div>
-                            <p class="MuiTypography-root MuiTypography-description css-mg5q4r">AAVE holders (Ethereum
-                                network only) can stake their AAVE in the Safety Module to add more security to the
-                                protocol and earn Safety Incentives. In the case of a shortfall event, up to 30% of your
-                                stake can be slashed to cover the deficit, providing an additional layer of protection
-                                for the protocol.<!-- --> <a
+                            <p class="MuiTypography-root MuiTypography-description css-mg5q4r">Core holders (Core Chain only) can stake their Unity Protocol Token in the Safety Module to add more security to the protocol and earn Safety Incentives. In the case of a shortfall event, up to 30% of your stake can be slashed to cover the deficit, providing an additional layer of protection for the protocol.<!-- --> <a
                                     class="MuiTypography-root MuiTypography-description MuiLink-root MuiLink-underlineNone css-5aht5b"
                                     href="https://docs.aave.com/faq/migration-and-staking" target="_blank"
                                     rel="noopener">Learn more about risks involved</a></p>
@@ -1841,6 +1837,5 @@
     <script id="__NEXT_DATA__"
         type="application/json">{"props":{"pageProps":{}},"page":"/staking","query":{},"buildId":"mEhuvmhNZlR0h8aKIE2Lv","nextExport":true,"autoExport":true,"isFallback":false,"scriptLoader":[]}</script>
 </body>
-<!-- Mirrored from app.aave.com/staking/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 23 Mar 2023 16:40:44 GMT -->
 
 </html>
