--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Unity Protocol- The First Lending Protocol On Core</title>
     <meta name="description"
         content="The First Lending Protocol On Core" />
-    <meta property="og:title" content="Aave - The First Lending Protocol On Core" />
+    <meta property="og:title" content="Unity Protocol- The First Lending Protocol On Core" />
     <meta property="og:description"
-        content="Unity Protocol Aave is The First is the first Lending Protocol On Core" />
+        content="Unity Protocol is The First is the first Lending Protocol On Core" />
     <meta property="og:image" content="unitycore.png" />
     <meta name="twitter:image" content="unitycore.png" />
     <meta name="twitter:image:alt" content="aave governance image" />
@@ -22,7 +22,7 @@
         content="Decentralized Finance, DeFi, lending, borrowing, stablecoins, Core Chain, assets, Core, smart contracts, open finance, trustless" />
     <meta name="next-head-count" content="14" />
     <meta name="theme-color" content="#00244D" />
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="unitycore.png" />
     <link rel="manifest" href="manifest.json" />
     <style data-emotion="css-global kpnynb">
         html {
