--- a/staking/index.html
+++ b/staking/index.html
@@ -5,26 +5,26 @@
 <head>
     <meta charSet="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <title>Aave - Open Source Liquidity Protocol</title>
+    <title>Unity Protocol- The First Lending Protocol On Core</title>
     <meta name="description"
-        content="Aave is an Open Source Protocol to create Non-Custodial Liquidity Markets to earn interest on supplying and borrowing assets with a variable or stable interest rate. The protocol is designed for easy integration into your products and services." />
-    <meta property="og:title" content="Aave - Open Source Liquidity Protocol" />
+        content="The First Lending Protocol On Core" />
+    <meta property="og:title" content="Unity Protocol- The First Lending Protocol On Core" />
     <meta property="og:description"
-        content="Aave is an Open Source Protocol to create Non-Custodial Liquidity Markets to earn interest on supplying and borrowing assets with a variable or stable interest rate. The protocol is designed for easy integration into your products and services." />
-    <meta property="og:image" content="../aaveMetaLogo-min.jpg" />
-    <meta name="twitter:image" content="../aaveMetaLogo-min.jpg" />
+        content="Unity Protocol is The First is the first Lending Protocol On Core" />
+    <meta property="og:image" content="unitycore.png" />
+    <meta name="twitter:image" content="unitycore.png" />
     <meta name="twitter:image:alt" content="aave governance image" />
-    <meta name="twitter:site" content="@AaveAave" />
+    <meta name="twitter:site" content="@unitycorepro" />
     <meta property="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Open Source Liquidity Protocol" />
+    <meta name="twitter:title" content="The First Lending Protocol On Core" />
     <meta name="twitter:description"
-        content="Aave is an Open Source Protocol to create Non-Custodial Liquidity Markets to earn interest on supplying and borrowing assets with a variable or stable interest rate. The protocol is designed for easy integration into your products and services." />
+        content="The First Lending Protocol On Core" />
     <meta name="keywords"
-        content="Decentralized Finance, DeFi, lending, borrowing, stablecoins, Ethereum, assets, erc-20, smart contracts, open finance, trustless" />
+        content="Decentralized Finance, DeFi, lending, borrowing, stablecoins, Core Chain, assets, Core, smart contracts, open finance, trustless" />
     <meta name="next-head-count" content="14" />
     <meta name="theme-color" content="#00244D" />
-    <link rel="shortcut icon" href="../favicon.ico" />
-    <link rel="manifest" href="../manifest.json" />
+    <link rel="shortcut icon" href="unitycore.png" />
+    <link rel="manifest" href="manifest.json" />
     <style data-emotion="css-global kpnynb">
         html {
             -webkit-font-smoothing: antialiased;
@@ -1731,11 +1731,11 @@
                         <div class="MuiBox-root css-1qm1lh">
                             <div class="MuiBox-root css-1coeexk">
                                 <p class="MuiTypography-root MuiTypography-subheader2 css-1vfaaju">Available on</p>
-                                <div class="MuiBox-root css-1570kgy"><img src="../icons/networks/ethereum.svg"
-                                        height="100%" width="100%" alt="Ethereum Mainnet" /></div>
+                                <div class="MuiBox-root css-1570kgy"><img src="../icons/networks/coredao.png"
+                                        height="100%" width="100%" alt="Core Mainnet" /></div>
                                 <p class="MuiTypography-root MuiTypography-subheader2 css-fodyq8">Ethereum Mainnet</p>
                             </div>
-                            <div class="MuiBox-root css-1coeexk"><img src="../aave.svg" width="32px" height="32px"
+                            <div class="MuiBox-root css-1coeexk"><img src="../unitycore.png" width="32px" height="32px"
                                     alt="" />
                                 <h1 class="MuiTypography-root MuiTypography-h1 css-1537p62">Staking</h1>
                             </div>
