--- a/markets/index.html
+++ b/markets/index.html
@@ -141,7 +141,7 @@
             -webkit-transition: top 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
             transition: top 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
             z-index: 1100;
-            background-color: #19191c;
+            background-color: #191b28;
             display: -webkit-box;
             display: -webkit-flex;
             display: -ms-flexbox;
@@ -870,7 +870,7 @@
         }
 
         .css-614h4q {
-            background-color: #19191c;
+            background-color: #191b28;
             color: #F1F1F3;
         }
 
