--- a/staking/index.html
+++ b/staking/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Mirrored from app.aave.com/staking/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 23 Mar 2023 16:40:42 GMT -->
-
 <head>
     <meta charSet="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
@@ -1794,9 +1792,9 @@
                                 <div class="MuiBox-root css-177aoda">
                                     <div class="MuiBox-root css-69i1ev"><span
                                             class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-x90exs"
-                                            aria-hidden="true"><img src="../icons/tokens/aave.svg" width="100%"
+                                            aria-hidden="true"><img src="../unitycore.png" width="100%"
                                                 height="100%" alt="aave icon" /></span>
-                                        <p class="MuiTypography-root MuiTypography-subheader1 css-4ijspw">AAVE</p>
+                                        <p class="MuiTypography-root MuiTypography-subheader1 css-4ijspw">UCORE</p>
                                     </div>
                                     <div class="MuiBox-root css-1ogb7x0">
                                         <p class="MuiTypography-root MuiTypography-subheader2 css-f3nsyd">Staking APR
@@ -1813,9 +1811,9 @@
                                 <div class="MuiBox-root css-177aoda">
                                     <div class="MuiBox-root css-69i1ev"><span
                                             class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-x90exs"
-                                            aria-hidden="true"><img src="../icons/tokens/bpt.svg" width="100%"
+                                            aria-hidden="true"><img src="../coredao.png" width="100%"
                                                 height="100%" alt="bpt icon" /></span>
-                                        <p class="MuiTypography-root MuiTypography-subheader1 css-4ijspw">ABPT</p>
+                                        <p class="MuiTypography-root MuiTypography-subheader1 css-4ijspw">Core</p>
                                     </div>
                                     <div class="MuiBox-root css-1ogb7x0">
                                         <p class="MuiTypography-root MuiTypography-subheader2 css-f3nsyd">Staking APR
