--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <meta name="theme-color" content="#00244D" />
     <link rel="shortcut icon" href="unitycore.png" />
     <link rel="manifest" href="manifest.json" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <style data-emotion="css-global kpnynb">
         html {
             -webkit-font-smoothing: antialiased;
@@ -1971,6 +1972,14 @@
                                                                 class="MuiTypography-root MuiTypography-subheader2 css-my2x37">
                                                                 Version 1</p>
                                                         </div>
+                                                        <div class="dropdown">
+                                                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                              Version 1
+                                                            </button>
+                                                            <ul class="dropdown-menu dropdown-menu-dark">
+                                                              <li><a class="dropdown-item active" href="#">Action</a></li>
+                                                            </ul>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div><input value="proto_mainnet_v3" aria-hidden="true" tabindex="-1"
@@ -2063,6 +2072,7 @@
     </div>
     <script id="__NEXT_DATA__"
         type="application/json">{"props":{"pageProps":{}},"page":"/","query":{},"buildId":"mEhuvmhNZlR0h8aKIE2Lv","nextExport":true,"autoExport":true,"isFallback":false,"scriptLoader":[]}</script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 
 </html>
