--- a/index.html
+++ b/index.html
@@ -1872,22 +1872,6 @@
             margin-bottom: 24px;
         }
     </style>
-    <link rel="preload" href="_next/static/css/2aa404b5c749f279.css" as="style" />
-    <link rel="stylesheet" href="_next/static/css/2aa404b5c749f279.css" data-n-g="" /><noscript
-        data-n-css=""></noscript>
-    <script defer="" nomodule="" src="_next/static/chunks/polyfills-5cd94c89d3acac5f.js"></script>
-    <script src="_next/static/chunks/webpack-0a821fcf07531fe7.js" defer=""></script>
-    <script src="_next/static/chunks/framework-bb5c596eafb42b22.js" defer=""></script>
-    <script src="_next/static/chunks/main-5d9d21faa54fd8bf.js" defer=""></script>
-    <script src="_next/static/chunks/pages/_app-ddc0a5a61c51f876.js" defer=""></script>
-    <script src="_next/static/chunks/249-14833263b8b2dad8.js" defer=""></script>
-    <script src="_next/static/chunks/897-d8412fb3f99afc7a.js" defer=""></script>
-    <script src="_next/static/chunks/176-0073e877959cdbaf.js" defer=""></script>
-    <script src="_next/static/chunks/270-70013c17ae01f612.js" defer=""></script>
-    <script src="_next/static/chunks/pages/index-aecd8013c0505251.js" defer=""></script>
-    <script src="_next/static/mEhuvmhNZlR0h8aKIE2Lv/_buildManifest.js" defer=""></script>
-    <script src="_next/static/mEhuvmhNZlR0h8aKIE2Lv/_ssgManifest.js" defer=""></script>
-    <script src="_next/static/mEhuvmhNZlR0h8aKIE2Lv/_middlewareManifest.js" defer=""></script>
 </head>
 
 <body>
@@ -1967,34 +1951,21 @@
                                                     <div class="MuiBox-root css-vc54u4">
                                                         <h1 class="MuiTypography-root MuiTypography-h1 css-1jz7z4v">
                                                             Core<!-- --> </h1>
-                                                        <div class="MuiBox-root css-wzu3c">
-                                                            <p
-                                                                class="MuiTypography-root MuiTypography-subheader2 css-my2x37">
-                                                                Version 1</p>
-                                                        </div>
                                                         <div class="dropdown">
-                                                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                                              Version 1
+                                                            <button class="btn btn-danger dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                                Version 1
                                                             </button>
-                                                            <ul class="dropdown-menu dropdown-menu-dark">
-                                                              <li><a class="dropdown-item active" href="#">Action</a></li>
+                                                            <ul class="dropdown-menu dropdown-menu-dark">      
+                                                                <li>
+                                                                    <a class="dropdown-item " href="#">
+                                                                        <img src="coredao.png" alt="" width="25%">Core
+                                                                    </a>
+                                                                </li>
                                                             </ul>
                                                         </div>
                                                     </div>
                                                 </div>
-                                            </div><input value="proto_mainnet_v3" aria-hidden="true" tabindex="-1"
-                                                class="MuiSelect-nativeInput css-1k3x8v3" /><svg
-                                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-1b6c8bu"
-                                                focusable="false" aria-hidden="true" viewBox="0 0 24 24"><svg
-                                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                                    stroke-width="2" stroke="currentColor" aria-hidden="true">
-                                                    <path stroke-linecap="round" stroke-linejoin="round"
-                                                        d="M19 9l-7 7-7-7"></path>
-                                                </svg></svg>
-                                            <fieldset aria-hidden="true"
-                                                class="MuiOutlinedInput-notchedOutline css-igs3ac">
-                                                <legend class="css-ihdtdm"><span class="notranslate">​</span></legend>
-                                            </fieldset>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -2062,16 +2033,29 @@
                         <img src="./unitycore.png" alt="" id="loveGhost_svg__b" width="10%">
                         <h2 class="MuiTypography-root MuiTypography-h2 css-11zj654">Connect your wallet</h2>
                         <p class="MuiTypography-root MuiTypography-description css-roudg2">Please connect your wallet to
-                            see your supplies, borrowings, and open positions.</p><button
+                            see your supplies, borrowings, and open positions.
+                        </p>
+                        <button
                             class="MuiButtonBase-root MuiButton-root MuiButton-gradient MuiButton-gradientPrimary MuiButton-sizeMedium MuiButton-gradientSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-gradient MuiButton-gradientPrimary MuiButton-sizeMedium MuiButton-gradientSizeMedium MuiButton-disableElevation css-9fybxg"
-                            tabindex="0" type="button">Connect wallet</button>
+                            tabindex="0" type="button">Connect wallet
+                        </button>
+                        <div class="dropdown">
+                            <button class="btn btn-danger dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Version 1
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-dark">      
+                                <li>
+                                    <a class="dropdown-item " href="#">
+                                        <img src="coredao.png" alt="" width="25%">Core
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </main>
     </div>
-    <script id="__NEXT_DATA__"
-        type="application/json">{"props":{"pageProps":{}},"page":"/","query":{},"buildId":"mEhuvmhNZlR0h8aKIE2Lv","nextExport":true,"autoExport":true,"isFallback":false,"scriptLoader":[]}</script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 
