--- a/index.html
+++ b/index.html
@@ -1958,7 +1958,7 @@
                                                             <ul class="dropdown-menu dropdown-menu-dark">      
                                                                 <li>
                                                                     <a class="dropdown-item " href="#">
-                                                                        <img src="coredao.png" alt="" width="25%">Core
+                                                                        <img src="coredao.png" alt="" width="25%">Core Chain
                                                                     </a>
                                                                 </li>
                                                             </ul>
