--- a/index.html
+++ b/index.html
@@ -1950,7 +1950,7 @@
                                                             height="100%" /></div>
                                                     <div class="MuiBox-root css-vc54u4">
                                                         <h1 class="MuiTypography-root MuiTypography-h1 css-1jz7z4v">
-                                                            Core <!-- --> </h1>
+                                                            Core Chain </h1>
                                                         <div class="dropdown">
                                                             <button class="btn btn-danger dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                                 Version 1
