--- a/index.html
+++ b/index.html
@@ -2002,7 +2002,7 @@
                                 <div class="MuiBox-root css-j7qwjs">
                                     <div class="MuiBox-root css-18biwo">
                                         <div class="MuiTypography-root MuiTypography-caption css-1fzsl0k">
-                                            <div style="display:flex">Net APY<div class="MuiBox-root css-70qvj9">
+                                 <!--      <div style="display:flex">Net APY<div class="MuiBox-root css-70qvj9">
                                                     <div class="MuiBox-root css-ulme3a"><button
                                                             class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-a9efdy"
                                                             tabindex="0" type="button"><svg
@@ -2017,7 +2017,22 @@
                                                                     </path>
                                                                 </svg></svg></button></div>
                                                 </div>
-                                            </div>
+                                          </div>-->
+                                            <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+
+  <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+
+  <label class="btn btn-outline-primary" for="btnradio1">Radio 1</label>
+
+  <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+
+  <label class="btn btn-outline-primary" for="btnradio2">Radio 2</label>
+
+  <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+
+  <label class="btn btn-outline-primary" for="btnradio3">Radio 3</label>
+
+</div>
                                         </div>
                                     </div><span class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-o92e62"
                                         style="height:24px"></span>
