--- a/index.html
+++ b/index.html
@@ -2028,9 +2028,9 @@
 
   <label class="btn btn-outline-primary" for="btnradio2">Radio 2</label>
 
-  <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+  <input type="radio" class="btn-check" name="btnradio" id
 
-  <label class="btn btn-outline-primary" for="btnradio3">Radio 3</label>
+ 
 
 </div>
                                         </div>
