--- a/index.html
+++ b/index.html
@@ -1907,10 +1907,12 @@
                                 </svg></svg></button></li>
                 </ul>
             </div>
-            <div class="MuiBox-root css-i9gxme"></div><button
+            <div class="MuiBox-root css-i9gxme"></div>
+           <!--<button
                 class="MuiButtonBase-root MuiButton-root MuiButton-gradient MuiButton-gradientPrimary MuiButton-sizeMedium MuiButton-gradientSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-gradient MuiButton-gradientPrimary MuiButton-sizeMedium MuiButton-gradientSizeMedium MuiButton-disableElevation css-9fybxg"
                 tabindex="0" type="button" aria-label="wallet" id="wallet-button" aria-haspopup="true">Connect
-                wallet</button>
+                wallet
+            </button>--> 
             <div class="MuiBox-root css-1me2gch"><button
                     class="MuiButtonBase-root MuiButton-root MuiButton-surface MuiButton-surfacePrimary MuiButton-sizeMedium MuiButton-surfaceSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-surface MuiButton-surfacePrimary MuiButton-sizeMedium MuiButton-surfaceSizeMedium MuiButton-disableElevation css-1x9sid4"
                     tabindex="0" type="button" aria-label="settings" id="settings-button" aria-haspopup="true"><svg
@@ -1950,7 +1952,7 @@
                                                             height="100%" /></div>
                                                     <div class="MuiBox-root css-vc54u4">
                                                         <h1 class="MuiTypography-root MuiTypography-h1 css-1jz7z4v">
-                                                            Core Chain </h1>
+                                                            Core Chain</h1>
                                                         <div class="dropdown">
                                                             <button class="btn btn-danger dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                                 Version 1
@@ -1971,7 +1973,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="MuiBox-root css-k7vncv">
+                      <!-- <div class="MuiBox-root css-k7vncv"> 
                             <div class="MuiBox-root css-ltjh6b">
                                 <div class="MuiBox-root css-q6wgnv"><svg width="20" height="19" viewBox="0 0 20 19"
                                         fill="none" xmlns="http://www.w3.org/2000/svg" role="img">
@@ -2002,7 +2004,7 @@
                                 <div class="MuiBox-root css-j7qwjs">
                                     <div class="MuiBox-root css-18biwo">
                                         <div class="MuiTypography-root MuiTypography-caption css-1fzsl0k">
-                                 <!--      <div style="display:flex">Net APY<div class="MuiBox-root css-70qvj9">
+                                            <div style="display:flex">Net APY<div class="MuiBox-root css-70qvj9">
                                                     <div class="MuiBox-root css-ulme3a"><button
                                                             class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-a9efdy"
                                                             tabindex="0" type="button"><svg
@@ -2017,28 +2019,13 @@
                                                                     </path>
                                                                 </svg></svg></button></div>
                                                 </div>
-                                          </div>-->
-                                            <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-
-  <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-
-  <label class="btn btn-outline-primary" for="btnradio1">Radio 1</label>
-
-  <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-
-  <label class="btn btn-outline-primary" for="btnradio2">Radio 2</label>
-
-  <input type="radio" class="btn-check" name="btnradio" id
-
- 
-
-</div>
+                                            </div>
                                         </div>
                                     </div><span class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-o92e62"
                                         style="height:24px"></span>
                                 </div>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </div>
