--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <meta name="theme-color" content="#00244D" />
     <link rel="shortcut icon" href="unitycore.png" />
     <link rel="manifest" href="manifest.json" />
+     <!-- Latest compiled and minified CSS -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <style data-emotion="css-global kpnynb">
         html {
@@ -661,6 +663,7 @@
             background: linear-gradient(248.86deg, #fc9109 10.51%, #fa7202 93.41%);
             -webkit-transition: all 0.2s ease;
             transition: all 0.2snn ease;
+            margin-bottom: 10px;
         }
 
         .css-9fybxg::-moz-focus-inner {
@@ -1859,6 +1862,7 @@
             line-height: 133.4%;
             font-size: 1.3125rem;
             margin-bottom: 8px;
+            margin-top: 10px;
         }
 
         .css-roudg2 {
@@ -1870,6 +1874,16 @@
             font-size: 0.875rem;
             color: #62677B;
             margin-bottom: 24px;
+        }
+        .nav-pills .nav-link {
+            color: #fc8d08;
+        }
+        .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+            background: linear-gradient(248.86deg, #fc9109 10.51%, #fa7202 93.41%);
+        }
+        .dropdown-menu.show {
+            display: block;
+            background-color: #191b28;
         }
     </style>
 </head>
@@ -1953,24 +1967,36 @@
                                                     <div class="MuiBox-root css-vc54u4">
                                                         <h1 class="MuiTypography-root MuiTypography-h1 css-1jz7z4v">
                                                             Core Chain</h1>
-                                                        <div class="dropdown">
-                                                            <button class="btn btn-danger dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                                                Version 1
-                                                            </button>
-                                                            <ul class="dropdown-menu dropdown-menu-dark">      
-                                                                <li>
-                                                                    <a class="dropdown-item " href="#">
-                                                                        <img src="coredao.png" alt="" width="25%">Core
-                                                                    </a>
-                                                                </li>
-                                                            </ul>
-                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                        <ul class="nav nav-pills">
+                            <li class="nav-item">
+                              <a class="nav-link active" data-toggle="pill" href="#supply">Supply</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" data-toggle="pill" href="#borrow">Borrow</a>
+                            </li>
+                        </ul>
+                          
+                          <!-- Tab panes -->
+                        <div class="tab-content">
+                            <div class="tab-pane container active" id="supply"> 
+                                <h2 class="MuiTypography-root MuiTypography-h2 css-11zj654">Supply assets</h2>
+                                <p class="MuiTypography-root MuiTypography-description css-roudg2">
+                                    Everything you need to know about supplying
+                                </p>
+                            </div>
+                            <div class="tab-pane container fade" id="borrow">
+                                <h2 class="MuiTypography-root MuiTypography-h2 css-11zj654">Borrow</h2>
+                                <p class="MuiTypography-root MuiTypography-description css-roudg2">
+                                    Everything you need to know about borrowing
+                                </p>
                             </div>
                         </div>
                       <!-- <div class="MuiBox-root css-k7vncv"> 
@@ -2042,22 +2068,34 @@
                             tabindex="0" type="button">Connect wallet
                         </button>
                         <div class="dropdown">
-                            <button class="btn btn-danger dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Version 1
-                            </button>
-                            <ul class="dropdown-menu dropdown-menu-dark">      
-                                <li>
-                                    <a class="dropdown-item " href="#">
-                                        <img src="coredao.png" alt="" width="25%">Core
-                                    </a>
+                            <ul class="nav nav-pills">
+                                <li class="nav-item">
+                                    <button class="nav-link active dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Version 1
+                                    </button>
+                                    <ul class="dropdown-menu dropdown-menu-dark">      
+                                        <li>
+                                            <a class="dropdown-item " href="https://scan.coredao.org/" target="_blank">
+                                                <img src="coredao.png" alt="" width="25%">Core
+                                            </a>
+                                        </li>
+                                    </ul>
                                 </li>
                             </ul>
                         </div>
-                    </div>
                 </div>
             </div>
         </main>
     </div>
+    <!-- jQuery library -->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+   
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 
