--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
             height: 2px;
             bottom: -6px;
             left: 0;
-            background: linear-gradient(248.86deg, #fa7202 10.51%, #fc9109 93.41%);
+            background: linear-gradient(248.86deg, #296ffa 10.51%, #6717ce 93.41%);
             transform-origin: bottom right;
             -webkit-transition: -webkit-transform 0.25s ease-out;
             transition: transform 0.25s ease-out;
@@ -660,7 +660,7 @@
             font-size: 0.875rem;
             padding: 6px 12px;
             color: #fff;
-            background: linear-gradient(248.86deg, #fc9109 10.51%, #fa7202 93.41%);
+            background: linear-gradient(248.86deg, #296ffa 10.51%, #6717ce 93.41%);
             -webkit-transition: all 0.2s ease;
             transition: all 0.2snn ease;
             margin-bottom: 10px;
@@ -718,7 +718,7 @@
 
         .css-9fybxg:hover,
         .css-9fybxg.Mui-focusVisible {
-            background: linear-gradient(248.86deg, #fa7202 10.51%, #fc9109 93.41%);
+            background: linear-gradient(248.86deg, #296ffa 10.51%, #6717ce 93.41%);
             opacity: 0.9;
         }
 
@@ -1878,10 +1878,10 @@
             margin-bottom: 24px;
         }
         .nav-pills .nav-link {
-            color: #fc8d08;
+            color: #2d67f5;
         }
         .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
-            background: linear-gradient(248.86deg, #fc9109 10.51%, #fa7202 93.41%);
+            background: linear-gradient(248.86deg, #296ffa 10.51%, #6717ce 93.41%);
         }
         .dropdown-menu.show {
             display: block;
@@ -1923,30 +1923,39 @@
                                 </svg></svg></button></li>
                 </ul>
             </div>
+                
+            
             <div class="MuiBox-root css-i9gxme"></div>
            <!--<button
                 class="MuiButtonBase-root MuiButton-root MuiButton-gradient MuiButton-gradientPrimary MuiButton-sizeMedium MuiButton-gradientSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-gradient MuiButton-gradientPrimary MuiButton-sizeMedium MuiButton-gradientSizeMedium MuiButton-disableElevation css-9fybxg"
                 tabindex="0" type="button" aria-label="wallet" id="wallet-button" aria-haspopup="true">Connect
                 wallet
             </button>--> 
-            <div class="MuiBox-root css-1me2gch"><button
+            <div class="MuiBox-root css-1me2gch">
+                <button
                     class="MuiButtonBase-root MuiButton-root MuiButton-surface MuiButton-surfacePrimary MuiButton-sizeMedium MuiButton-surfaceSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-surface MuiButton-surfacePrimary MuiButton-sizeMedium MuiButton-surfaceSizeMedium MuiButton-disableElevation css-1x9sid4"
                     tabindex="0" type="button" aria-label="settings" id="settings-button" aria-haspopup="true"><svg
                         class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-q5q60p" focusable="false" aria-hidden="true"
-                        viewBox="0 0 24 24"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                        viewBox="0 0 24 24">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
                             fill="currentColor" aria-hidden="true">
                             <path fill-rule="evenodd"
                                 d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z"
                                 clip-rule="evenodd"></path>
-                        </svg></svg></button></div>
-            <div class="MuiBox-root css-1100lx1"><button
+                        </svg></svg>
+                </button>
+            </div>
+            <div class="MuiBox-root css-1100lx1">
+                <button
                     class="MuiButtonBase-root MuiButton-root MuiButton-surface MuiButton-surfacePrimary MuiButton-sizeMedium MuiButton-surfaceSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-surface MuiButton-surfacePrimary MuiButton-sizeMedium MuiButton-surfaceSizeMedium MuiButton-disableElevation css-1x9sid4"
                     tabindex="0" type="button" id="settings-button-mobile"><svg
                         class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-q5q60p" focusable="false" aria-hidden="true"
                         viewBox="0 0 24 24"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                             stroke-width="2" stroke="currentColor" aria-hidden="true">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"></path>
-                        </svg></svg></button></div>
+                        </svg></svg>
+                </button>
+            </div>
         </header>
         <main class="MuiBox-root css-b95f0i">
             <div class="MuiBox-root css-614h4q">
