--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      <!-- Latest compiled and minified CSS -->
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
+     <link href='https://fonts.googleapis.com/css?family=Space Grotesk' rel='stylesheet'>
     <style data-emotion="css-global kpnynb">
         html {
             -webkit-font-smoothing: antialiased;
@@ -655,7 +655,7 @@
             transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
             box-shadow: none;
             border-radius: 4px;
-            font-family: Inter, Arial;
+            font-family: 'Space Grotesk';
             font-weight: 500;
             line-height: 1.5rem;
             font-size: 0.875rem;
@@ -1859,7 +1859,7 @@
 
         .css-11zj654 {
             margin: 0;
-            font-family: Inter, Arial;
+            font-family: 'Space Grotesk';
             font-weight: 600;
             letter-spacing: unset;
             line-height: 133.4%;
@@ -1870,7 +1870,7 @@
 
         .css-roudg2 {
             margin: 0;
-            font-family: Inter, Arial;
+            font-family: 'Space Grotesk';
             font-weight: 400;
             letter-spacing: 0.009375rem;
             line-height: 143%;
@@ -1880,6 +1880,7 @@
         }
         .nav-pills .nav-link {
             color: #2d67f5;
+            font-family: 'Space Grotesk';
         }
         .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
             background: linear-gradient(248.86deg, #296ffa 10.51%, #6717ce 93.41%);
@@ -1889,6 +1890,7 @@
             background-color: #191b28;
         }
         .dropdown-item{
+            font-family: 'Space Grotesk';
             color: white;
         }
         .btn-check:checked+.btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check)+.btn:active {
@@ -1901,7 +1903,10 @@
         }
         .navbar-nav .nav-link.active, .navbar-nav .show>.nav-link {
             color: rgb(255 255 255);
-           
+            font-family: 'Space Grotesk';
+        }
+        .input-group:not(.has-validation)>.dropdown-toggle:nth-last-child(n+3), .input-group:not(.has-validation)>.form-floating:not(:last-child)>.form-control, .input-group:not(.has-validation)>.form-floating:not(:last-child)>.form-select, .input-group:not(.has-validation)>:not(:last-child):not(.dropdown-toggle):not(.dropdown-menu):not(.form-floating) {
+            font-family: 'Space Grotesk';
         }
     </style>
 </head>
