--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="next-head-count" content="14" />
     <meta name="theme-color" content="#00244D" />
     <link rel="shortcut icon" href="unitycore.png" />
-    <link rel="manifest" href="manifest.json" />
+    <script src="index.js"></script>
      <!-- Latest compiled and minified CSS -->
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -2089,7 +2089,10 @@
                         <p class="MuiTypography-root MuiTypography-description css-roudg2">Please connect your wallet to
                             see your supplies, borrowings, and open positions.
                         </p>
-                        <button class="btn btn-primary css-9fybxg">
+                        <button class="btn btn-primary css-9fybxg"
+                                onClick="Connect"
+                                id="connect"
+                        >
                             <span class="spinner-border spinner-border-sm"></span>
                             Connect wallet...
                         </button>
