--- a/markets/index.html
+++ b/markets/index.html
@@ -663,6 +663,7 @@
             background: linear-gradient(248.86deg, #fc9109 10.51%, #fa7202 93.41%);
             -webkit-transition: all 0.2s ease;
             transition: all 0.2s ease;
+            gap: 0.5vw;
         }
 
         .css-9fybxg::-moz-focus-inner {
@@ -2220,6 +2221,9 @@
         }
         .btn:not(:disabled):not(.disabled) {
             background: linear-gradient(248.86deg, #296ffa 10.51%, #6717ce 93.41%);
+        }
+        .input-group>:not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
+            background: #ffffff;
         }
     </style>
     
