--- a/markets/index.html
+++ b/markets/index.html
@@ -22,7 +22,7 @@
         content="Decentralized Finance, DeFi, lending, borrowing, stablecoins, Core Chain, assets, Core, smart contracts, open finance, trustless" />
     <meta name="next-head-count" content="14" />
     <meta name="theme-color" content="#00244D" />
-    <link rel="shortcut icon" href="unitycore.png" />
+    <link rel="shortcut icon" href="./unitycore.png" />
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -2225,6 +2225,9 @@
         .input-group>:not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
             background: #ffffff;
         }
+        .navbar-nav .nav-link.active, .navbar-nav .show>.nav-link {
+            color: white;
+        }
     </style>
     
 </head>
@@ -2242,16 +2245,16 @@
                         <a class="nav-link active" aria-current="page" href="https://unitytokensd.com">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Dashboard</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="markets/index.html">Markets</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Markets</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="staking/index.html">Stake</a>
+                        <a class="nav-link active" aria-current="page" href="../staking/index.html">Stake</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="governance/index.html">Governance</a>
+                        <a class="nav-link active" aria-current="page" href="../governance/index.html">Governance</a>
                     </li>
                     <ul class="nav nav-pills">
                         <li class="nav-item">
