--- a/index.html
+++ b/index.html
@@ -1928,13 +1928,13 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Dashboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="markets/index.html">Markets</a>
+                            <a class="nav-link active" aria-current="page" href="markets/">Markets</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="staking/index.html">Stake</a>
+                            <a class="nav-link active" aria-current="page" href="staking/">Stake</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="governance/index.html">Governance</a>
+                            <a class="nav-link active" aria-current="page" href="governance/">Governance</a>
                         </li>
                         <ul class="nav nav-pills">
                             <li class="nav-item">
