--- a/markets/index.html
+++ b/markets/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charSet="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <title>Unity Protocol- The First Lending Protocol On Core</title>
+    <title>Unity Protocol | Markets</title>
     <meta name="description"
         content="The First Lending Protocol On Core" />
-    <meta property="og:title" content="Unity Protocol- The First Lending Protocol On Core" />
+    <meta property="og:title" content="Unity Protocol | Markets" />
     <meta property="og:description"
         content="Unity Protocol is The First is the first Lending Protocol On Core" />
     <meta property="og:image" content="unitycore.png" />
@@ -2251,10 +2251,10 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Markets</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../staking/index.html">Stake</a>
+                        <a class="nav-link active" aria-current="page" href="../staking/">Stake</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../governance/index.html">Governance</a>
+                        <a class="nav-link active" aria-current="page" href="../governance/">Governance</a>
                     </li>
                     <ul class="nav nav-pills">
                         <li class="nav-item">
