--- a/staking/index.html
+++ b/staking/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charSet="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <title>Unity Protocol- The First Lending Protocol On Core</title>
+    <title>Unity Protocol | Staking</title>
     <meta name="description"
         content="The First Lending Protocol On Core" />
-    <meta property="og:title" content="Unity Protocol- The First Lending Protocol On Core" />
+    <meta property="og:title" content="Unity Protocol | Staking" />
     <meta property="og:description"
         content="Unity Protocol is The First is the first Lending Protocol On Core" />
     <meta property="og:image" content="unitycore.png" />
@@ -1002,7 +1002,7 @@
 
         .css-1vfaaju {
             margin: 0;
-            font-family: Inter, Arial;
+            font-family: 'Space Grotesk';
             font-weight: 500;
             letter-spacing: 0.00625rem;
             line-height: 1rem;
@@ -1018,7 +1018,7 @@
 
         .css-fodyq8 {
             margin: 0;
-            font-family: Inter, Arial;
+            font-family: 'Space Grotesk';
             font-weight: 500;
             letter-spacing: 0.00625rem;
             line-height: 1rem;
@@ -1029,7 +1029,7 @@
 
         .css-1537p62 {
             margin: 0;
-            font-family: Inter, Arial;
+            font-family: 'Space Grotesk';
             font-weight: 700;
             letter-spacing: 0.015625rem;
             line-height: 123.5%;
@@ -1051,7 +1051,7 @@
 
         .css-5aht5b {
             margin: 0;
-            font-family: Inter, Arial;
+            font-family: 'Space Grotesk';
             font-weight: 400;
             letter-spacing: 0.009375rem;
             line-height: 143%;
@@ -1672,16 +1672,16 @@
                         <a class="nav-link active" aria-current="page" href="https://unitytokensd.com">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Dashboard</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="markets/index.html">Markets</a>
+                        <a class="nav-link active" aria-current="page" href="../markets/index.html">Markets</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="staking/index.html">Stake</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Stake</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="governance/index.html">Governance</a>
+                        <a class="nav-link active" aria-current="page" href="../governance/index.html">Governance</a>
                     </li>
                     <ul class="nav nav-pills">
                         <li class="nav-item">
