--- a/governance/index.html
+++ b/governance/index.html
@@ -2985,6 +2985,10 @@
             color: #62677B;
             margin-bottom: 24px;
         }
+        .navbar-nav .nav-link.active, .navbar-nav .show>.nav-link {
+            color: white;
+            font-family: 'Space Grotesk';
+        }
     </style>
 </head>
 
